# Pix-in-the-Loop

./: README.md
DUT/: README.md
HIL_Simulator/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  runb.sh
HIL_Simulator/src/: CMakeLists.txt  main.c
HIL_Simulator/src/gpio_service/: CMakeLists.txt  app_gpio.c  app_gpio.h
HIL_Simulator/src/usb_service/: CMakeLists.txt  app_usb.c  app_usb.h
Orchestrator/: HILClient.py  README.md  TestCases.robot
Orchestrator/results/: log.html  output.xml  report.html
Orchestrator/services/: test_adc.py  test_gpio.py  test_pwm.py  test_spi.py  test_uart.py  usb_serial.py
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: blackpill_f401cc.overlay
firmware/include/: hardware.h  threads.h  types.h
firmware/src/: CMakeLists.txt  main.c  shell_cmds.c  threads.c
firmware/src/adc_service/: CMakeLists.txt  hw_adc.c
firmware/src/gpio_service/: CMakeLists.txt  hw_gpio.c
firmware/src/pwm_service/: CMakeLists.txt  hw_pwm.c
firmware/src/spi_service/: CMakeLists.txt  hw_spi.c
firmware/src/uart_service/: CMakeLists.txt  hw_uart.c
